# MLib

./: .gitignore  CMakeLists.txt  CPUMatrix.cpp  CPUMatrix.hpp  CPUTensor.hpp  ConvolutionalLayer.cpp  ConvolutionalLayer.hpp  Examples.cpp  FeedForwardLayer.cpp  FeedForwardLayer.hpp  GPUMatrix.cu  GPUMatrix.hpp  GPUTensor.cu  GPUTensor.hpp  LICENSE  Layer.hpp  Matrix Deprecated.h  Matrix.cpp  Matrix.cu  Matrix.hpp  MatrixStrategy.vcxproj  MatrixStrategy.vcxproj.filters  Neural.hpp  README.md  Source.cpp  Templates.hpp  TensorTemplate.hpp  Training.hpp  kernel.cu  tests.hpp
.metals/: metals.h2.db
Tests/: Conv.hpp  FF.hpp  Matrix Core.hpp  Matrix Math.hpp  Trainer.hpp  test.cpp
include/: AsyncJob.hpp  IO.hpp
ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  main  rules.ninja
ninja/PNG/libpng-code/: CTestTestfile.cmake  cmake_install.cmake  libpng.sym  libpng17d.so.17  libpng17d.so.17.0.0  png-fix-itxt  pngfix  pnglibconf.c  pnglibconf.out
ninja/PNG/libpng-code/scripts/: genchk.cmake  genout.cmake  gensrc.cmake  intprefix.out  pnglibconf.c  prefix.out  symbols.chk  symbols.out
ninja/PNG/libpng-code/tests/: pngimage-full.cmake  pngimage-quick.cmake  pngstest-1.8-alpha.cmake  pngstest-1.8-none.cmake  pngstest-linear-alpha.cmake  pngstest-linear-none.cmake  pngstest-none-alpha.cmake  pngstest-sRGB-alpha.cmake  pngtest.cmake  pngunknown-IDAT.cmake  pngunknown-discard.cmake  pngunknown-if-safe.cmake  pngunknown-sAPI.cmake  pngunknown-sTER.cmake  pngunknown-save.cmake
src/: IO.cpp
